# hwtree

./: CMakeLists.txt  License.txt  README.md
include/hwt/: hwt.hpp  hwtnode.hpp  hwtree.hpp
src/: hwt.cpp  hwtnode.cpp  hwtree.cpp
tests/: run_hwtree.cpp  test_hwt.cpp  test_hwtree.cpp
